<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ImapLocate</string>
    <string name="new_account">New Account</string>
    <string name="new_note">New Note</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="account_removed">Account has been removed</string>
    <string name="quotation_marks_not_allowed">Quotation marks are not allowed in account name</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="check_and_create_account"><![CDATA[Check & Create Account]]></string>
    <string name="logging_in">Logging into your account…</string>
    <string name="account_already_exists_or_is_null">Account already exists or is null</string>
    <string name="account_added">Account has been added</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Local account name</string>
    <string name="account_name_description">in the form of an email address</string>
    <string name="username">User name / e-mail</string>
    <string name="your_login_name">Your login name for mail server</string>
    <string name="password">Password</string>
    <string name="your_password">Your password for mail server</string>
    <string name="server">Mail server name</string>
    <string name="imap_notes_server">Host name IMAP server</string>
    <string name="server_port_number_to_use">Server port number to use</string>
    <string name="port_number">Port Number</string>
    <string name="sync_interval_minutes">Sync Interval in Minutes (0=Off)</string>
    <string name="notes_folder_optional">Notes Folder (optional)</string>
    <string name="manually_set_full_imap_path_to_notes_folder">Manually set notes folder path</string>
    <string name="use_sticky_notes">Use Sticky Notes</string>
    <string name="welcome">Welcome</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="syncing">Synchronising…</string>
    <string name="refreshing_notes_list">Refreshing notes list…</string>
    <string name="updating_notes_list">Updating notes list…</string>
    <string name="editAccount">Edit Account</string>
    <string name="Waiting_for_sync">Waiting for synchronizing finish</string>
    <string name="Invalid_Message">Invalid Message Data</string>
    <string name="sort_date">Sort by Date</string>
    <string name="sort_title">Sort by Title</string>
    <string name="sort">Sort</string>
    <string name="undo">UnDo</string>
    <string name="redo">ReDo</string>
    <string name="format">Format</string>
    <string name="heading">Heading</string>
    <string name="txt_color">Text Color</string>
    <string name="bg_color">Background Color</string>
    <string name="alignment">Alignment</string>
    <string name="insert">insert</string>
    <string name="note_last_change">Last Change</string>
    <string name="sync_wait_necessary">Wait for Synchronization finished</string>
    <string name="security">Security</string>
    <string name="note_title">Note Title</string>
    <string name="brown">Brown</string>
    <string name="none">None</string>
    <string name="delete_note">Delete note</string>
    <string name="are_you_sure_you_wish_to_delete_the_note">Are you sure you wish to delete the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_color">Sort by Color</string>
    <string name="license">License: GPL v3.0</string>
    <string name="internet">Internet: github.com/niendo1/ImapNotes3/</string>
    <string name="placeholder">Insert text here…</string>
    <string name="AccountList">Account List</string>
    <string name="Last_sync">"Last sync: "</string>
    <string name="minutes_short">min</string>
    <string name="share">Share</string>
    <string name="shared_note_from">Shared note from </string>
    <string name="account_name_not_valid_email">Account Name is not an E-Mail address</string>
    <string name="account_modified">Account has been modified</string>
    <string name="intent_save_as_note">Save as note</string>
    <string name="share_file_error">Share file error:</string>
    <string name="send_debug_report">Create Error Report</string>
    <string name="insert_as_new_note">Insert shared data as new note</string>
    <string name="insert_in_note">Insert shared data</string>
    <string name="ok">OK</string>
</resources>
