<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/color"
        android:icon="@drawable/ic_action_color"
        android:title="@string/color"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/none"
                    android:checked="true"
                    android:title="@string/none" />
                <item
                    android:id="@+id/blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/yellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/brown"
                    android:title="@string/brown" />
            </group>
        </menu>
    </item>

</menu>
