<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccountBgColor"
        android:orientation="vertical"
        android:textColor="@color/AccountTxtColor">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/add_account"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/accountnameEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/account_name_description"
            android:autofillHints="yes"
            android:inputType="textEmailAddress">
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/your_login_name"
            android:autofillHints="yes"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:autofillHints="yes"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/serverEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/imap_notes_server"
            android:autofillHints="yes"
            android:inputType="textNoSuggestions|text|textVisiblePassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <Spinner
            android:id="@+id/securitySpinner"
            android:popupBackground="@color/AccountBgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/portnumEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:ems="10"
            android:hint="@string/server_port_number_to_use"
            android:inputType="number"
            android:autofillHints="yes"
            android:textColor="@color/AccountTxtColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_interval_minutes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <NumberPicker
            android:id="@+id/syncintervalMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_folder_optional"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/AccountTxtColor" />

        <EditText
            android:id="@+id/folderEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:autofillHints="yes"
            android:inputType="text"
            android:hint="@string/manually_set_full_imap_path_to_notes_folder"
            android:textColor="@color/AccountTxtColor" />

        <CheckBox
            android:id="@+id/stickyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/AccountTxtColor"
            android:text="@string/use_sticky_notes" />

        <!-- <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:onClick="DoLogin"
            android:text="Login" >
        </Button> -->

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

    </LinearLayout>

</ScrollView>
