<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/StatusBgColor"
        android:gravity="center|center_horizontal"
        android:maxLines="1"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="0px"
        android:layout_marginBottom="0px"
        android:textColor="@color/StatusTxtColor"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccountBgColor"
        android:orientation="horizontal"
        android:textColor="@color/AccountTxtColor">

        <Spinner
            android:id="@+id/accountSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:contentDescription="@string/AccountList"
            android:popupBackground="@color/AccountBgColor" />
        <Button
            android:id="@+id/editAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/editAccount"
            android:background="@drawable/ic_action_user_edit" />

    </LinearLayout>

    <ListView
        android:id="@+id/notesList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
